--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>SGCT-ULEAM</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="../src/app/img/icono.png">
+  <link rel="icon" type="image/x-icon" href="/src/app/img/icono.png">
 </head>
 
 <body>
